--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             const buildUrl = "Build";
             const loaderUrl = buildUrl + "/Build WebGL.loader.js";
             const config = {
-              dataUrl: buildUrl + "/Build WebGL.data.gz",
-              frameworkUrl: buildUrl + "/Build WebGL.framework.js.gz",
-              codeUrl: buildUrl + "/Build WebGL.wasm.gz",
+              dataUrl: buildUrl + "/Build WebGL.data",
+              frameworkUrl: buildUrl + "/Build WebGL.framework.js",
+              codeUrl: buildUrl + "/Build WebGL.wasm",
               streamingAssetsUrl: "StreamingAssets",
               companyName: "DefaultCompany",
               productName: "FROGGLE",
