toast notification fix

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <script>
             const hideFullScreenButton = "";
             const buildUrl = "Build";
-            const loaderUrl = buildUrl + "/Froggle.loader.js";
+            const loaderUrl = buildUrl + "/Build WebGL.loader.js";
             const config = {
-              dataUrl: buildUrl + "/Froggle.data",
-              frameworkUrl: buildUrl + "/Froggle.framework.js",
-              codeUrl: buildUrl + "/Froggle.wasm",
+              dataUrl: buildUrl + "/Build WebGL.data",
+              frameworkUrl: buildUrl + "/Build WebGL.framework.js",
+              codeUrl: buildUrl + "/Build WebGL.wasm",
               streamingAssetsUrl: "StreamingAssets",
               companyName: "AtomikRecord",
               productName: "FROGGLE",
